--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -2,7 +2,7 @@
 <header class="top-navbar">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
+      <a class="navbar-brand" href="/">
         <img src="/images/logo.png" alt="" />
       </a>
       <button
@@ -29,29 +29,30 @@
           <li class="nav-item <%= page_name === 'courses' && 'active' %>">
             <a class="nav-link" href="/courses">Courses</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="dashboard.html">Dashboard</a>
+          <% if(userIN) { %>
+          <li class="nav-item <%= page_name === 'dashboard' && 'active' %>">
+            <a class="nav-link" href="users/dashboard">Dashboard</a>
           </li>
+          <% } %>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
+        <% if(!userIN) { %>
+
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a
               class="
                 hover-btn-new
                 log
-                mr-2
-                hover-btn-new
-                log
                 <%=
                 page_name
-                ===
-                'login'
+                ==='login'
                 &&
                 'orange'
                 %>
+                mr-2
               "
               href="/login"
               ><span><i class="fa fa-sign-in" aria-hidden="true"></i></span
@@ -64,8 +65,7 @@
                 log
                 <%=
                 page_name
-                ===
-                'register'
+                ==='register'
                 &&
                 'orange'
                 %>
@@ -75,6 +75,18 @@
             ></a>
           </li>
         </ul>
+
+        <% } %> <% if(userIN) { %>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a class="hover-btn-new log mr-2" href="/users/logout"
+              ><span><i class="fa fa-sign-out" aria-hidden="true"></i></span
+            ></a>
+          </li>
+        </ul>
+
+        <% } %>
       </div>
     </div>
   </nav>
