--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,14 +6,6 @@ if(user) { %> <% if(user.role ==='student') { %>
   </div>
 </div>
 
-<% } %> <% if(user.role ==='teacher') { %>
-<div class="all-title-box">
-  <div class="container text-center">
-    <h1><%= user.name %><span class="m_1">TEACHER</span></h1>
-  </div>
-</div>
-
-<% } %>
 <div id="overviews" class="section wb">
   <div class="container">
     <div class="row">
@@ -131,4 +123,146 @@ if(user) { %> <% if(user.role ==='student') { %>
   <!-- end container -->
 </div>
 <!-- end section -->
-<% } %> <%- include('partials/_footer') %>
+
+<% } %> <% if(user.role ==='teacher') { %>
+<div class="all-title-box">
+  <div class="container text-center">
+    <h1><%= user.name %><span class="m_1">TEACHER</span></h1>
+  </div>
+</div>
+<div id="overviews" class="section wb">
+  <div class="container">
+    <div class="row">
+      <!-- Modal Button -->
+      <div class="col-lg-12 text-center">
+        <button
+          class="btn btn-lg btn-warning rounded-0 text-white"
+          href="#"
+          data-toggle="modal"
+          data-target="#addCourse"
+        >
+          <span>CREATE NEW COURSE</span>
+        </button>
+      </div>
+      <div class="col-lg-12 blog-post-single">
+        <div class="blog-author">
+          <div class="author-bio">
+            <h3 class="author_name">COURSES FROM: <%= user.name %></h3>
+          </div>
+        </div>
+      </div>
+      <!-- end col -->
+    </div>
+    <!-- end row -->
+    <div class="row mt-5">
+      <% for (let i=0; i< courses.length; i++) { %>
+      <div class="col-lg-6 col-md-6 col-12">
+        <div class="course-item mb-5">
+          <div class="image-blog">
+            <img src="/images/blog_1.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="course-br">
+            <div class="course-title">
+              <h2><a href="/courses/<%= courses[i].slug %>" title=""><%= courses[i].name %></a></h2>
+            </div>
+            <div class="course-desc">
+              <p>
+                <%= courses[i].description %>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% } %>
+      <!-- end col -->
+
+    </div>
+    <!-- end row -->
+  </div>
+  <!-- end container -->
+</div>
+<!-- end section -->
+<!-- ADD Modal -->
+<div
+  class="modal fade"
+  id="addCourse"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="myModalLabel"
+>
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-body customer-box">
+        <!-- Tab panes -->
+        <div class="tab-content">
+          <div class="tab-pane active" id="Login">
+            <form method="POST" action="/courses" class="form-horizontal">
+              <div class="form-group">
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="name"
+                    class="form-control"
+                    placeholder="Course Name"
+                  />
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-12">
+                  <input
+                    type="hidden"
+                    name="role"
+                    value="<%= user.role %>"
+                    class="form-control"
+                    placeholder="Course Name"
+                  />
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-12">
+                  <textarea
+                    rows="8"
+                    name="description"
+                    class="form-control"
+                    placeholder="Course Description"
+                    required
+                  ></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-12">
+                  <select class="form-control" name="category">
+                    <% for (let i=0; i< categories.length; i++) { %>
+                      <option value="<%= categories[i]._id %>"><%= categories[i].name %></option>
+                    </option>
+                    <% } %>
+                  </select>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-10">
+                  <button
+                    type="submit"
+                    class="btn btn-light btn-radius btn-brd grd1"
+                  >
+                    Submit
+                  </button>
+                  <button
+                    type="submit"
+                    class="btn btn-light btn-radius btn-brd grd1"
+                    data-dismiss="modal"
+                    aria-hidden="true"
+                  >
+                    Cancel
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<% } %> <% } %> <%- include('partials/_footer') %>
