course student relationship and search box edited

--- a/views/course.ejs
+++ b/views/course.ejs
@@ -19,10 +19,20 @@
             <img src="/images/blog_single.jpg" alt="" class="img-fluid" />
           </div>
           <div class="post-content">
+            <% if (user && !(user.courses.includes(course._id)) ) { %>
             <div class="post-date">
-              <span class="day">30</span>
-              <span class="month">Nov</span>
+              <form method="POST" action="/courses/enroll">
+                <input
+                  type="hidden"
+                  name="course_id"
+                  value="<%= course._id %>"
+                />
+                <button class="btn btn-lg btn-warning text-white">
+                  <span>ENROLL</span>
+                </button>
+              </form>
             </div>
+            <% } %>
             <div class="meta-info-blog">
               <span
                 ><i class="fa fa-calendar"></i> <a href="#">May 11, 2015</a>
@@ -41,22 +51,22 @@
           <div class="author-bio">
             <h3 class="author_name"><%= course.user.name %></h3>
           </div>
-         </div>
+        </div>
       </div>
       <!-- end col -->
       <div class="col-lg-3 col-12 right-single">
         <div class="widget-search">
           <div class="site-search-area">
-            <form method="get" id="site-searchform" action="#">
+            <form method="GET" id="site-searchform" action="/courses">
               <div>
                 <input
                   class="input-text form-control"
-                  name="search-k"
+                  name="search"
                   id="search-k"
-                  placeholder="Search keywords..."
+                  placeholder="Search..."
                   type="text"
                 />
-                <input id="searchsubmit" value="Search" type="submit" />
+                <button id="searchsubmit" value="Search" type="submit"></button>
               </div>
             </form>
           </div>
@@ -64,12 +74,13 @@
         <div class="widget-categories">
           <h3 class="widget-title">Categories</h3>
           <ul>
-            <li><a href="#">Political Science</a></li>
-            <li><a href="#">Business Leaders Guide</a></li>
-            <li><a href="#">Become a Product Manage</a></li>
-            <li><a href="#">Language Education</a></li>
-            <li><a href="#">Micro Biology</a></li>
-            <li><a href="#">Social Media Management</a></li>
+            <% for (let i=0; i< categories.length; i++) { %>
+            <li>
+              <a href="/courses?categories=<%= categories[i].slug %>"
+                ><%= categories[i].name %></a
+              >
+            </li>
+            <% } %>
           </ul>
         </div>
       </div>
