--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -12,8 +12,15 @@
 <div id="overviews" class="section wb">
   <div class="container">
     <div class="row">
+      
       <div class="col-lg-9 blog-post-single">
+        <% if (flashMessages) { %> <% if (flashMessages.success) { %>
+          <div class="alert alert-success"><%= flashMessages.success %></div>
+          <% } else if (flashMessages.error) { %>
+          <div class="alert alert-danger"><%= flashMessages.error %></div>
+          <% } %> <% } %>
         <div class="row">
+          
           <% for (let i=0; i< courses.length; i++) { %>
           <div class="col-lg-6 col-md-6 col-12">
             <div class="course-item mb-5">
