--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -66,6 +66,11 @@ if(user) { %> <% if(user.role ==='student') { %>
 <div id="overviews" class="section wb">
   <div class="container">
     <div class="row">
+      <% if (flashMessages) { %> <% if (flashMessages.success) { %>
+        <div class="alert alert-success"><%= flashMessages.success %></div>
+        <% } else if (flashMessages.error) { %>
+        <div class="alert alert-danger"><%= flashMessages.error %></div>
+        <% } %> <% } %>
       <!-- Modal Button -->
       <div class="col-lg-12 text-center">
         <button
@@ -102,6 +107,14 @@ if(user) { %> <% if(user.role ==='student') { %>
               <p>
                 <%= courses[i].description %>
               </p>
+              <div class="clearfix">
+                <ul style="list-style-type: none;">
+                  <li style="float: left;"><button class="btn btn-primary rounded-0 text-white"><span>UPDATE</span></button></li>
+                  <li style="float: right;"><a href="/courses/<%= courses[i].slug %>?_method=DELETE" 
+                    onclick="return confirm('ARE YOU SURE')"
+                    class="btn btn-danger rounded-0 text-white"><span>DELETE</span></a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
