--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,3 +1,4 @@
+<!-- STUDENT -->
 <%- include('partials/_header') %> <%- include('partials/_navigation') %> <%
 if(user) { %> <% if(user.role ==='student') { %>
 <div class="all-title-box">
@@ -57,6 +58,9 @@ if(user) { %> <% if(user.role ==='student') { %>
 </div>
 <!-- end section -->
 
+
+<!-- TEACHER -->
+
 <% } %> <% if(user.role ==='teacher') { %>
 <div class="all-title-box">
   <div class="container text-center">
@@ -105,11 +109,11 @@ if(user) { %> <% if(user.role ==='student') { %>
             </div>
             <div class="course-desc">
               <p>
-                <%= courses[i].description %>
+                <%= courses[i].description.substring(0,100) + "..." %> 
               </p>
               <div class="clearfix">
                 <ul style="list-style-type: none;">
-                  <li style="float: left;"><button class="btn btn-primary rounded-0 text-white"><span>UPDATE</span></button></li>
+                  <li style="float: left;"><button class="btn btn-primary rounded-0 text-white" data-toggle="modal" data-target="#updateCourse<%= courses[i]._id %>"><span>UPDATE</span></button></li>
                   <li style="float: right;"><a href="/courses/<%= courses[i].slug %>?_method=DELETE" 
                     onclick="return confirm('ARE YOU SURE')"
                     class="btn btn-danger rounded-0 text-white"><span>DELETE</span></a></li>
@@ -119,6 +123,89 @@ if(user) { %> <% if(user.role ==='student') { %>
           </div>
         </div>
       </div>
+<!-- UPDATE Modal -->
+<div
+class="modal fade"
+id="updateCourse<%= courses[i]._id %>"
+tabindex="-1"
+role="dialog"
+aria-labelledby="myModalLabel"
+>
+<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+  <div class="modal-content">
+    <div class="modal-body customer-box">
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <div class="tab-pane active" id="Login">
+          <form method="POST" action="/courses/<%= courses[i].slug%>?_method=PUT" class="form-horizontal">
+            <div class="form-group">
+              <div class="col-sm-12">
+                <input
+                  type="text"
+                  name="name"
+                  value="<%= courses[i].name %>"
+                  class="form-control"
+                  placeholder="Course Name"
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-12">
+                <input
+                  type="hidden"
+                  name="role"
+                  value="<%= user.role %>"
+                  class="form-control"
+                  placeholder="Course Name"
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-12">
+                <textarea
+                  rows="8"
+                  name="description"            
+                  class="form-control"
+                  placeholder="Course Description"
+                  required
+                f><%= courses[i].description %></textarea>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-sm-12">
+                <select class="form-control" name="category">
+                  <% for (let i=0; i< categories.length; i++) { %>
+                    <option value="<%= categories[i]._id %>"><%= categories[i].name %></option>
+                  </option>
+                  <% } %>
+                </select>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-10">
+                <button
+                  type="submit"
+                  class="btn btn-light btn-radius btn-brd grd1"
+                >
+                  Submit
+                </button>
+                <button
+                  type="submit"
+                  class="btn btn-light btn-radius btn-brd grd1"
+                  data-dismiss="modal"
+                  aria-hidden="true"
+                >
+                  Cancel
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
       <% } %>
       <!-- end col -->
 
