Added admin role

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,19 +1,19 @@
-<!-- STUDENT -->
-<%- include('partials/_header') %> <%- include('partials/_navigation') %> <%
-if(user) { %> <% if(user.role ==='student') { %>
+<%- include('partials/_header'); %> <%- include('partials/_navigation'); %> <%
+if(user) { %> <% if(user.role==='student' ) { %>
 <div class="all-title-box">
   <div class="container text-center">
     <h1><%= user.name %><span class="m_1">STUDENT</span></h1>
   </div>
 </div>
-
 <div id="overviews" class="section wb">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 blog-post-single">
         <div class="blog-author">
           <div class="author-bio">
-            <h3 class="author_name"><a href="#"> Courses Enreolled by: <%= user.name %></a></h3>
+            <h3 class="author_name">
+              <a href="#"> Courses Enrolled by: <%= user.name %></a>
+            </h3>
           </div>
         </div>
       </div>
@@ -29,12 +29,14 @@ if(user) { %> <% if(user.role ==='student') { %>
           </div>
           <div class="course-br">
             <div class="course-title">
-              <h2><a href="course-single.html" title=""><%= user.courses[i].name %></a></h2>
+              <h2>
+                <a href="/courses/<%= user.courses[i].slug %>" title=""
+                  ><%= user.courses[i].name %>
+                </a>
+              </h2>
             </div>
             <div class="course-desc">
-              <p>
-                <%= user.courses[i].description %>
-              </p>
+              <p><%= user.courses[i].description %></p>
               <form method="POST" action="/courses/release">
                 <input
                   type="hidden"
@@ -42,26 +44,22 @@ if(user) { %> <% if(user.role ==='student') { %>
                   value="<%= user.courses[i]._id %>"
                 />
                 <button class="btn btn-lg btn-danger text-white">
-                  <span>RELEASE</span> 
+                  <span>RELEASE</span>
                 </button>
               </form>
             </div>
           </div>
         </div>
       </div>
+      <!-- end col -->
       <% } %>
-      <!-- end col -->    
     </div>
     <!-- end row -->
   </div>
   <!-- end container -->
 </div>
 <!-- end section -->
-
-
-<!-- TEACHER -->
-
-<% } %> <% if(user.role ==='teacher') { %>
+<% } %> <% if(user.role==='teacher' ) { %>
 <div class="all-title-box">
   <div class="container text-center">
     <h1><%= user.name %><span class="m_1">TEACHER</span></h1>
@@ -71,10 +69,11 @@ if(user) { %> <% if(user.role ==='student') { %>
   <div class="container">
     <div class="row">
       <% if (flashMessages) { %> <% if (flashMessages.success) { %>
-        <div class="alert alert-success"><%= flashMessages.success %></div>
-        <% } else if (flashMessages.error) { %>
-        <div class="alert alert-danger"><%= flashMessages.error %></div>
-        <% } %> <% } %>
+      <div class="alert alert-success"><%= flashMessages.success %></div>
+
+      <% } else if (flashMessages.error) { %>
+      <div class="alert alert-danger"><%= flashMessages.error %></div>
+      <% } %> <% } %>
       <!-- Modal Button -->
       <div class="col-lg-12 text-center">
         <button
@@ -89,7 +88,7 @@ if(user) { %> <% if(user.role ==='student') { %>
       <div class="col-lg-12 blog-post-single">
         <div class="blog-author">
           <div class="author-bio">
-            <h3 class="author_name">COURSES FROM: <%= user.name %></h3>
+            <h3 class="author_name">COURSE FROM: <%= user.name %></h3>
           </div>
         </div>
       </div>
@@ -105,110 +104,133 @@ if(user) { %> <% if(user.role ==='student') { %>
           </div>
           <div class="course-br">
             <div class="course-title">
-              <h2><a href="/courses/<%= courses[i].slug %>" title=""><%= courses[i].name %></a></h2>
+              <h2>
+                <a href="/courses/<%= courses[i].slug %>" title=""
+                  ><%= courses[i].name %></a
+                >
+              </h2>
             </div>
             <div class="course-desc">
-              <p>
-                <%= courses[i].description.substring(0,100) + "..." %> 
-              </p>
-              <div class="clearfix">
-                <ul style="list-style-type: none;">
-                  <li style="float: left;"><button class="btn btn-primary rounded-0 text-white" data-toggle="modal" data-target="#updateCourse<%= courses[i]._id %>"><span>UPDATE</span></button></li>
-                  <li style="float: right;"><a href="/courses/<%= courses[i].slug %>?_method=DELETE" 
+              <p><%= courses[i].description %></p>
+            </div>
+            <div class="clearfix">
+              <ul style="list-style-type: none">
+                <li style="float: left">
+                  <button
+                    class="btn btn-primary rounded-0 text-white"
+                    data-toggle="modal"
+                    data-target="#updateCourse<%= courses[i]._id %>"
+                  >
+                    <span>UPDATE</span>
+                  </button>
+                </li>
+                <li style="float: right">
+                  <a
+                    href="/courses/<%= courses[i].slug %>?_method=DELETE"
                     onclick="return confirm('ARE YOU SURE')"
-                    class="btn btn-danger rounded-0 text-white"><span>DELETE</span></a></li>
-                </ul>
+                    class="btn btn-danger rounded-0 text-white"
+                    ><span>DELETE</span></a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end col -->
+      <!-- UPDATE Modal -->
+      <div
+        class="modal fade"
+        id="updateCourse<%= courses[i]._id %>"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="myModalLabel"
+      >
+        <div
+          class="modal-dialog modal-dialog-centered modal-lg"
+          role="document"
+        >
+          <div class="modal-content">
+            <div class="modal-body customer-box">
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <div class="tab-pane active" id="Login">
+                  <form
+                    method="POST"
+                    action="/courses/<%= courses[i].slug %>?_method=PUT"
+                    class="form-horizontal"
+                  >
+                    <div class="form-group">
+                      <div class="col-sm-12">
+                        <input
+                          type="text"
+                          name="name"
+                          value="<%= courses[i].name %>"
+                          class="form-control"
+                          placeholder="Course Name"
+                        />
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-sm-12">
+                        <input
+                          type="hidden"
+                          name="role"
+                          class="form-control"
+                          value="<%= user.role %>"
+                        />
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-sm-12">
+                        <textarea
+                          rows="8"
+                          name="description"
+                          class="form-control"
+                          placeholder="Course Description"
+                          required
+                        >
+<%= courses[i].description %></textarea
+                        >
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-sm-12">
+                        <select class="form-control" name="category">
+                          <% for (let i=0; i< categories.length; i++) { %>
+                          <option value="<%= categories[i]._id %>">
+                            <%= categories[i].name %>
+                          </option>
+                          <% } %>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-10">
+                        <button
+                          type="submit"
+                          class="btn btn-light btn-radius btn-brd grd1"
+                        >
+                          Submit
+                        </button>
+                        <button
+                          type="submit"
+                          class="btn btn-light btn-radius btn-brd grd1"
+                          data-dismiss="modal"
+                          aria-hidden="true"
+                        >
+                          Cancel
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-<!-- UPDATE Modal -->
-<div
-class="modal fade"
-id="updateCourse<%= courses[i]._id %>"
-tabindex="-1"
-role="dialog"
-aria-labelledby="myModalLabel"
->
-<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-  <div class="modal-content">
-    <div class="modal-body customer-box">
-      <!-- Tab panes -->
-      <div class="tab-content">
-        <div class="tab-pane active" id="Login">
-          <form method="POST" action="/courses/<%= courses[i].slug%>?_method=PUT" class="form-horizontal">
-            <div class="form-group">
-              <div class="col-sm-12">
-                <input
-                  type="text"
-                  name="name"
-                  value="<%= courses[i].name %>"
-                  class="form-control"
-                  placeholder="Course Name"
-                />
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-12">
-                <input
-                  type="hidden"
-                  name="role"
-                  value="<%= user.role %>"
-                  class="form-control"
-                  placeholder="Course Name"
-                />
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-12">
-                <textarea
-                  rows="8"
-                  name="description"            
-                  class="form-control"
-                  placeholder="Course Description"
-                  required
-                f><%= courses[i].description %></textarea>
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-12">
-                <select class="form-control" name="category">
-                  <% for (let i=0; i< categories.length; i++) { %>
-                    <option value="<%= categories[i]._id %>"><%= categories[i].name %></option>
-                  </option>
-                  <% } %>
-                </select>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-10">
-                <button
-                  type="submit"
-                  class="btn btn-light btn-radius btn-brd grd1"
-                >
-                  Submit
-                </button>
-                <button
-                  type="submit"
-                  class="btn btn-light btn-radius btn-brd grd1"
-                  data-dismiss="modal"
-                  aria-hidden="true"
-                >
-                  Cancel
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
       <% } %>
-      <!-- end col -->
-
     </div>
     <!-- end row -->
   </div>
@@ -245,9 +267,8 @@ aria-labelledby="myModalLabel"
                   <input
                     type="hidden"
                     name="role"
-                    value="<%= user.role %>"
                     class="form-control"
-                    placeholder="Course Name"
+                    value="<%= user.role %>"
                   />
                 </div>
               </div>
@@ -266,7 +287,8 @@ aria-labelledby="myModalLabel"
                 <div class="col-sm-12">
                   <select class="form-control" name="category">
                     <% for (let i=0; i< categories.length; i++) { %>
-                      <option value="<%= categories[i]._id %>"><%= categories[i].name %></option>
+                    <option value="<%= categories[i]._id %>">
+                      <%= categories[i].name %>
                     </option>
                     <% } %>
                   </select>
@@ -298,4 +320,109 @@ aria-labelledby="myModalLabel"
   </div>
 </div>
 
-<% } %> <% } %> <%- include('partials/_footer') %>
+<% } %> <% if(user.role==='admin' ) { %>
+<div class="all-title-box">
+  <div class="container text-center">
+    <h1><%= user.name %><span class="m_1">ADMIN</span></h1>
+  </div>
+</div>
+<div id="overviews" class="section wb">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 blog-post-single">
+        <div class="blog-author">
+          <div class="author-bio">
+            <h3 class="author_name">
+              <a href="#"> Courses Enrolled by: <%= user.name %></a>
+            </h3>
+          </div>
+        </div>
+      </div>
+      <!-- end col -->
+    </div>
+    <!-- end row -->
+    <div class="row mt-5">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">ID#</th>
+            <th scope="col">Email</th>
+            <th scope="col">Role</th>
+            <th scope="col">DELETE</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for (let i=0; i< users.length; i++) { %>
+          <tr>
+            <th scope="row"><%= users[i]._id%></th>
+            <td><%= users[i].email%></td>
+            <td><%= users[i].role%></td>
+            <td>
+              <a
+                href="/users/<%= users[i]._id%>?_method=DELETE"
+                onclick="return confirm('ARE YOU SURE')"
+                class="btn btn-danger rounded-0 text-white"
+                ><span>DELETE</span></a
+              >
+            </td>
+          </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
+    <!-- end row -->
+  </div>
+  <!-- end container -->
+</div>
+<!-- end section -->
+<!-- ADD Modal -->
+<div
+  class="modal fade"
+  id="addCategory"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="myModalLabel"
+>
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-body customer-box">
+        <!-- Tab panes -->
+        <div class="tab-content">
+          <div class="tab-pane active" id="Login">
+            <form method="POST" action="/categories" class="form-horizontal">
+              <div class="form-group">
+                <div class="col-sm-12">
+                  <input
+                    type="text"
+                    name="name"
+                    class="form-control"
+                    placeholder="Category Name"
+                  />
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-10">
+                  <button
+                    type="submit"
+                    class="btn btn-light btn-radius btn-brd grd1"
+                  >
+                    Submit
+                  </button>
+                  <button
+                    type="submit"
+                    class="btn btn-light btn-radius btn-brd grd1"
+                    data-dismiss="modal"
+                    aria-hidden="true"
+                  >
+                    Cancel
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<% } %> <% } %> <%- include('partials/_footer'); %>
