--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,9 +61,12 @@
             <div class="row align-items-center">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
+
+						<% if (courses[0]) { %> 
                         <h2><%= courses[0].name %></h2>
                         <p><%= courses[0].description %></p>
                         <a href="/courses/<%= courses[0].slug %>" class="hover-btn-new orange"><span>Learn More</span></a>
+						<% } %>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
@@ -82,9 +85,11 @@
 				
 				<div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                     <div class="message-box">
+						<% if (courses[1]) { %> 
                         <h2><%= courses[1].name %></h2>
                         <p>L<%= courses[1].description %></p>
                         <a href="/courses/<%= courses[1].slug %>" class="hover-btn-new orange"><span>Learn More</span></a>
+						<% } %>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
